--- a/core/templates/servicos.html
+++ b/core/templates/servicos.html
@@ -2,16 +2,16 @@
 <section id="services" class="section-padding">
       <div class="container">
         <div class="section-header text-center">
-          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Our Services</h2>
+          <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Nossos Serviços</h2>
           <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
         </div>
         <div class="row">
           <!-- Services item -->
           {% for s in servicos %}
           <div class="col-md-6 col-lg-4 col-xs-12">
-            <div class="services-item wow fadeInRight" data-wow-delay="0.3s">
-              <div class="{{ s.icone }}">
-                <i class="lni-cog"></i>
+            <div class="services-item wow fadeInRight" data-wow-delay="1.2s">
+              <div class="icon">
+                <i class="{{ s.icone }}"></i>
               </div>
               <div class="services-content">
                 <h3><a href="#">{{ s.servico }}</a></h3>
